# play_launch_parser

./: .envrc  .gitignore  CLAUDE.md  COLCON_IGNORE  Cargo.toml  README.md  justfile
src/play_launch_parser/: CMakeLists.txt  Cargo.toml  package.xml  record.json
src/play_launch_parser/src/: captures.rs  condition.rs  context.rs  error.rs  file_cache.rs  ir.rs  lib.rs  main.rs  params.rs
src/play_launch_parser/src/actions/: arg.rs  container.rs  declare_argument.rs  executable.rs  group.rs  include.rs  let_action.rs  load_composable_node.rs  mod.rs  node.rs  set_env.rs  set_parameter.rs  set_remap.rs
src/play_launch_parser/src/python/: bridge.rs  executor.rs  mod.rs
src/play_launch_parser/src/python/api/: actions.rs  conditions.rs  event_handlers.rs  launch.rs  launch_description_sources.rs  launch_ros.rs  mod.rs  parameter_descriptions.rs  some_substitutions_type.rs  substitutions.rs  utilities.rs  utils.rs
src/play_launch_parser/src/record/: generator.rs  mod.rs  types.rs
src/play_launch_parser/src/substitution/: context.rs  eval.rs  mod.rs  parser.rs  types.rs
src/play_launch_parser/src/traverser/: entity.rs  include.rs  ir_builder.rs  ir_evaluator.rs  mod.rs  namespace.rs  python_exec.rs  record_conv.rs  xml_include.rs  yaml.rs
src/play_launch_parser/src/xml/: entity.rs  mod.rs  parser.rs
src/play_launch_parser/tests/: edge_cases.rs  integration_tests.rs  ir_eval_tests.rs  ir_tests.rs  python_tests.rs  xml_tests.rs
src/play_launch_parser/tests/fixtures/: README.md
src/play_launch_parser/tests/fixtures/includes/: included.launch.xml  robot_description.launch.xml
src/play_launch_parser/tests/fixtures/launch/: composable_node_simple.launch.xml  debug_ns_loadnode.launch.xml  debug_ns_main.launch.xml  debug_ns_python.launch.py  test_autoware_patterns.launch.xml  test_conditions.launch.xml  test_find_pkg.launch.xml  test_include_pkg.launch.xml  test_include_with_list_args.launch.py  test_let_ordering.launch.xml  test_list_concatenation.launch.py  test_namespace_sync_xml_python.launch.xml  test_opaque_conditional.launch.py  test_opaque_function.launch.py  (+8 more)
(+84 files in other folders)
