<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>play_launch_parser</name>
  <version>0.1.0</version>
  <description>High-performance ROS 2 launch file parser in Rust</description>
  <maintainer email="noreply@tier4.jp">play_launch_parser contributors</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>cargo_ament_build</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
